--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Sankara Nigeria Limited | Agricultural Machinery, Tractors & Farm Equipment</title>
     <meta name="description" content="Nigeria's trusted partner for agricultural machinery. Premium tractors from Massey Ferguson, Lovol, Zoomlion. Farm implements, spare parts & expert support." />
     <meta name="author" content="Sankara Nigeria Limited" />
@@ -12,14 +13,14 @@
     <meta property="og:title" content="Sankara Nigeria Limited | Agricultural Machinery & Tractors" />
     <meta property="og:description" content="Driving agricultural growth with reliable machinery. Premium tractors, farm implements & spare parts across Nigeria." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://sankaranigeria.com/Sankara%20Logo.png" />
     <meta property="og:url" content="https://sankaranigeria.com" />
     <meta property="og:site_name" content="Sankara Nigeria Limited" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sankara Nigeria Limited | Agricultural Machinery" />
     <meta name="twitter:description" content="Nigeria's trusted partner for tractors, farm implements & spare parts." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://sankaranigeria.com/Sankara%20Logo.png" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
